--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "jison-ejemplo",
+  "name": "proyecto2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node dist/index.js",
+    "jison": "jison src/controllers/analizador/gramatica/gramatica.jison",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "jison": "jison grammar.jison",
-    "start": "nodemon index.js"
+    "g": "node ./src/controllers/analizador/gramatica/analisis.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.16.1",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3"
+  },
   "dependencies": {
-    "jison": "^0.4.18",
-    "nodemon": "^2.0.7"
+    "@types/node-fetch": "^2.5.10",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "jison": "^0.4.18"
   }
 }
