--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/node-fetch": "^2.5.10",
     "cors": "^2.8.5",
+    "datauri": "^3.0.0",
     "express": "^4.16.4",
     "jison": "^0.4.18"
   }
