--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "datauri": "^3.0.0",
     "express": "^4.16.4",
-    "jison": "^0.4.18"
+    "jison": "^0.4.18",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14"
   }
 }
